--- a/StarWiki/package.json
+++ b/StarWiki/package.json
@@ -11,21 +11,28 @@
   },
   "dependencies": {
     "@expo-google-fonts/source-sans-pro": "^0.2.2",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
+    "expo-linear-gradient": "~11.3.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "0.17.7",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/plugin-syntax-decorators": "^7.18.6",
     "@react-native-community/eslint-config": "^3.0.3",
-    "@types/react": "~17.0.21",
+    "@types/react": "^18.0.15",
     "@types/react-native": "~0.67.6",
     "@types/styled-components": "^5.1.25",
     "babel-plugin-root-import": "^6.6.0",
