--- a/StarWiki/tsconfig.json
+++ b/StarWiki/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "src",
     "paths": {
       "~/*": ["*"]
-    },
-  },
-  "extends": "expo/tsconfig.base"
+    }
+  }
 }
